examples/type_system/failing/124_lambda_missing_close_paren.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let add = \(x, y -> x + y
let after = 3
